2004-10-07 Mikhail Khodjaiants
	Pass the current stack frame to the registers manager to provide the evaluation context.
	* ICRegisterManager.java
	* IDummyStackFrame.java
	* CRegisterManager.java
	* CDebugTarget.java
	* CDummyStackFrame.java
	* CRegisterGroup.java
	* CStackFrame.java

2004-10-07 Mikhail Khodjaiants
	Provide a context for expression evaluation.
	* ICValue.java
	* AbstractCValue.java
	* CArrayPartitionValue.java
	* CValue.java

2004-10-06 Mikhail Khodjaiants
	Added the "getType" method to ICValue.
	* ICValue.java
	* AbstractCValue.java
	* CArrayPartitionValue.java
	* CValue.java

2004-09-30 Mikhail Khodjaiants
	Implementing adapters for the platform's Memory view.
	* CExtendedMemoryBlockRetrieval.java: new
	* CDebugTarget.java
	* CExtendedMemoryBlock.java: new
	* CThread.java
	* InternalDebugCoreMessages.properties

2004-09-29 Mikhail Khodjaiants
	Use the new "createAddress(BigInteger)" method of "IAddressFactory".
	* CBreakpointManager.java
	* AsmInstruction.java
	* CFormattedMemoryBlock.java
	* CSharedLibrary.java
	* CStackFrame.java
	* CValue.java

2004-09-28 Mikhail Khodjaiants
	Synchronize the "getType" method of "CVariable.InternalVariable".
	* CVariable.java
 
2004-09-27 Mikhail Khodjaiants
	Use the new "getValue" method of "IAddress" for address comparison.
	* Disassembly.java

2004-09-27 Mikhail Khodjaiants
	Target filtering fixes for watchpoints.
	* CBreakpointManager.java

2004-09-21 Mikhail Khodjaiants
	Fixed the problems with the Disassembly view and address breakpoints caused by switch to IAddress.
	* CBreakpointManager.java
	* AsmInstruction.java
	* Disassembly.java
	* DisassemblyBlock.java
	* src/org/eclipse/cdt/debug/internal/core/CDebugUtils.java: removed

2004-09-21 Mikhail Khodjaiants
	Changes to the IBinary interface
	* CDebugTarget.java

2004-09-20 Mikhail Khodjaiants
	Evaluate expressions on stack frame instead of target to provide evaluation context.
	* ICDebugTarget.java
	* ICStackFrame.java
	* ICExpressionEvaluator.java